--- a/sistemaFormularios.csproj
+++ b/sistemaFormularios.csproj
@@ -62,6 +62,12 @@
     <Compile Include="FrmCalculadora.Designer.cs">
       <DependentUpon>FrmCalculadora.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmFim.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmFim.Designer.cs">
+      <DependentUpon>FrmFim.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +93,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmCalculadora.resx">
       <DependentUpon>FrmCalculadora.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmFim.resx">
+      <DependentUpon>FrmFim.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPrincipal.resx">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
